# talky_docker_task

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  Readme.md  justfile  makefile
src/: config.rs  index.html  main.rs  types.rs  util.rs  views.rs
templates/: index.html
