[package]
name = "talky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
easy_paths = "0.1.1"
include_dir = "0.7.3"
serde = {version =  "1.0.193", features = ["derive"]}
tokio = {version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
upon = "0.8.0"
